<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/cardCorner"
        app:cardElevation="@dimen/cardElevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/cardPadding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ayrac"
                android:layout_width="@dimen/ayrac"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ayrac_log_reg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/itemLayoutMargin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ViewStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idea"
                    android:textColor="@color/status"
                    android:textSize="@dimen/noteStatus" />

                <TextView
                    android:id="@+id/ViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titleHint"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/noteTitle" />

                <TextView
                    android:id="@+id/ViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionHint"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/noteDescription" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>